--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ omit =
      fabfile.py
      setup.py
      .eggs/*
+     .tox/*
 
 [coverage:report]
 # Regexes for lines to exclude from consideration
