--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,12 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py33, py34, py35
+envlist = py27#, py33, py34, py35
 
 [testenv]
+deps = -rtests_requirements.txt
+
 commands =
-    pip install -e .[tests]
-    python setup.py test
+    pyenv local
+    #pip install -e .[tests]
+    uwsgi --pyrun setup.py --pyargv test --sharedarea=100 --enable-threads
