--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,6 @@ envlist = py27#, py33, py34, py35
 deps = -rtests_requirements.txt
 
 commands =
-    pyenv local
+    pyenv local 2.7 3.2 3.3.0 3.4.0 3.5.0 3.6.0 3.7-dev pypy-4.0.1
     #pip install -e .[tests]
     uwsgi --pyrun setup.py --pyargv test --sharedarea=100 --enable-threads
