Fixed UWSGICollector.collect to return unique metrics. Fixed registry_to_text format.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include setup.py README.rst MANIFEST.in LICENSE *.txt
 recursive-include pyprometheus/ *
 graft tests
 global-exclude *~
+global-exclude #*#
