Python 3 support done!

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,19 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27#, py33, py34, py35
+envlist = py27, py35, py36, py34, py33
+
 
 [testenv]
 deps = -rtests_requirements.txt
+whitelist_externals =
+    echo
 
 commands =
-    pyenv local 2.7 3.2 3.3.0 3.4.0 3.5.0 3.6.0 3.7-dev pypy-4.0.1
-    #pip install -e .[tests]
+    # pyenv version
+    # echo "{envname} - {posargs} - {envpython}"
+    # pyenv local 2.7
+    # pip install -e .[tests]
+    # ci/test
+    # uwsgi --pyrun ./
     uwsgi --pyrun setup.py --pyargv test --sharedarea=100 --enable-threads
