--- a/.travis.yml
+++ b/.travis.yml
@@ -12,20 +12,27 @@ script:
 notifications:
   email: false
 
+python:
+  - '2.7'
+  - '3.5'
+  - '3.6'
+  - '3.4'
+  - '3.3'
+
 
 matrix:
   include:
     - python: "2.7"
       env: UWSGI="2.0.14"
 
-    # - python: "3.3"
-    #   env: UWSGI="2.0.14"
+    - python: "3.3"
+      env: UWSGI="2.0.14"
 
-    # - python: "3.4"
-    #   env: UWSGI="2.0.14"
+    - python: "3.4"
+      env: UWSGI="2.0.14"
 
-    # - python: "3.5"
-    #   env: UWSGI="2.0.14"
+    - python: "3.5"
+      env: UWSGI="2.0.14"
 
-    # - python: "3.6"
-    #   env: UWSGI="2.0.14"
+    - python: "3.6"
+      env: UWSGI="2.0.14"
