--- a/setup.cfg
+++ b/setup.cfg
@@ -5,12 +5,12 @@ addopts=-s -p no:doctest --flake8 --cov=./
 norecursedirs=pyprometheus build bin dist docs .git
 flake8-max-line-length = 100
 flake8-ignore =
-    *.py E501
+    *.py E501 F821
     main/settings/*.py F403 F401
     */migrations/* ALL
 
 [flake8]
-ignore = E501,F403,F401,D100,D101,D102,D103,I004,I001,I003,Q000,D205,D400,D105
+ignore = E501,F403,F401,D100,D101,D102,D103,I004,I001,I003,Q000,D205,D400,D105,F821
 max-line-length = 100
 exclude = .tox,.git,docs,.ropeproject
 inline-quotes = double
